# citysim-ubuntutouch

./: Block.qml  BottomToolbar.qml  CMakeLists.txt  Dialogue.qml  Game.qml  Main.qml  Makefile  Menu.qml  README.md  Tools.qml  block_logic.js  build.sh  city.apparmor  city.desktop  clickable.json  logic.js  manifest.json  manifest.json.in
assets/: toolButton.qml
assets/lands/commercial/: Commercial.qml
assets/lands/empty/: Empty.qml
assets/lands/fire/: Fire.qml
assets/lands/hospital/: Hospital.qml
assets/lands/industrial/: Industrial.qml
assets/lands/park/: Park.qml
assets/lands/police/: Police.qml
assets/lands/power/: Power.qml
assets/lands/residential/: Residential.qml  authors.txt
assets/lands/road/: Road.qml  authors.txt
assets/lands/school/: School.qml
assets/lands/water/: Water.qml
components/: Block.qml  BottomToolbar.qml  Dialogue.qml  FlickableBoard.qml  Game.qml  GameBoard.qml  GameItem.qml  Menu.qml  Tools.qml
plugins/: CMakeLists.txt
plugins/CitySim/: CMakeLists.txt  citysim.cpp  citysim.h  plugin.cpp  plugin.h  qmldir
scripts/: city-data.js  logic.js
